feat(gui): implement batch info panel for multi-selection
- Add updateBatchView function to show batch selection summary
- Display entity count by type (e.g., '3 tasks, 1 bug')
- Show list of selected entities with checkboxes for removal
- Add batch action buttons (Close, Queue Add/Remove, Export)
- Add CSS styling for batch entity list and action buttons
- Add unit tests for batch view detection and summary generation
- Add test-batch-info-panel.html for manual testing
- Clean up batch-specific elements when switching to single selection

Implements bn-f33a: Transform info panel for multi-selection batch view

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -335,6 +335,9 @@
             onInfoClick: (nodeId) => {
                 console.log('Info clicked for node:', nodeId);
                 showNodeDetailModal(nodeId);
+            },
+            onDocRead: (docId) => {
+                showDocViewer(docId);
             }
         });
         
