feat: Replace pagination with 'Load more' button in activity log
- Changed from Previous/Next pagination to 'Load more' style
- Clicking 'Load more' appends older entries to existing list
- Shows progress as 'Load More (X of Y)'
- Hides button when all entries are loaded
- Refresh resets to top instead of maintaining scroll position
- Updated test-activity-log-css.html to reflect new UI

Closes bn-1eb2

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/test-activity-log-css.html
+++ b/web/test-activity-log-css.html
@@ -199,11 +199,11 @@
                 </div>
             </div>
 
-            <div class="log-pagination">
-                <button class="pagination-btn">← Previous</button>
-                <span class="pagination-info">Page 1 of 5 (247 total)</span>
-                <button class="pagination-btn">Next →</button>
-            </div>
+            <div class="log-loading-more" style="display: none; text-align: center; padding: 1rem; color: var(--text-secondary);">Loading more entries...</div>
+
+            <button class="log-load-more-btn" style="width: 100%; padding: 1rem; margin-top: 1rem; background: var(--bg-tertiary); color: var(--text-primary); border: 1px solid var(--border-color); border-radius: 4px; cursor: pointer; font-size: 0.9rem;">
+                Load More (50 of 247)
+            </button>
         </div>
     </div>
 
