fix: apply blue theme text color to header and graph controls
- Add color: var(--text-primary) to .header class in index.html
- Add color: var(--text-primary) to .graph-controls class
- Ensures text is visible (white/light) against blue-themed backgrounds
- Fixes issue where header and graph bar labels appeared black

Resolves bn-6abe

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -36,6 +36,7 @@
         /* Additional layout styles for the full app */
         .header {
             background: var(--bg-secondary);
+            color: var(--text-primary);
             padding: 1rem 1.5rem;
             border-bottom: 2px solid var(--border-color);
             display: flex;
