fix: resolve 'State is not defined' error in onAutoFollowToggle
The inline script in index.html was importing State as 'state' (lowercase)
but the onAutoFollowToggle callback was trying to use 'State' (capital S).

Fixed by:
- Importing as 'State' to match usage in graph-controls.js
- Creating lowercase 'state' alias for backward compatibility

Closes bn-30b9

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -258,7 +258,8 @@
     
     <script type="module">
         // Import all necessary modules
-        import * as state from './js/state.js';
+        import * as State from './js/state.js';
+        const state = State; // Lowercase alias for convenience
         import * as graph from './js/graph/index.js';
         import * as connection from './js/connection/index.js';
         import { initializeAgentCards } from './js/components/agent-cards.js';
