fix: GUI graph now rebuilds when WebSocket data loads
Fixes bn-ca4f: GUI graph was not rebuilding after WebSocket data loaded.

Root cause: The onStateChange callback in index.html was just logging
but not triggering a graph rebuild. While the graph renderer does
subscribe to state changes via state.subscribe('entities.*'), that
subscription wasn't firing for the initial data load.

Solution:
- Added rebuildGraph() public function to graph/renderer.js
- Exported it from graph/index.js
- Called graph.rebuildGraph() in both onStateChange callbacks in index.html

This ensures the graph rebuilds when:
1. Initial data is loaded from WebSocket
2. Incremental updates arrive via WebSocket

The graph will now properly display all entities after the initial load.

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -829,6 +829,7 @@
                     onStateChange: () => {
                         // Trigger graph update when data changes
                         console.log('State updated from server');
+                        graph.rebuildGraph();
                     }
                 });
             } else {
@@ -840,6 +841,7 @@
                     await connection.connect(detection.wsUrl, {
                         onStateChange: () => {
                             console.log('State updated from server');
+                            graph.rebuildGraph();
                         }
                     });
                 }
