feat(gui): Implement terminate action with optimistic UI
- Update terminateAgent() to call REST API /api/agents/:id/terminate
- Add optimistic status update to 'terminating' before API call
- Revert optimistic update if API call fails
- Add 'terminating' status badge (orange) to agent cards
- Disable terminate button when agent is in 'terminating' state
- Show 'Terminating...' text on button during termination
- Add CSS styles for terminating status and disabled button
- Update sort order to place terminating agents after stale
- Add test control for terminating agents in test-agent-cards.html
- Remove unused sendMessage import

Implements task bn-ba52 from PRD bn-4bb5 (Agents Tab MVP).

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/test-agent-cards.html
+++ b/web/test-agent-cards.html
@@ -57,6 +57,7 @@
             <button id="add-active">Add Active Agent</button>
             <button id="add-idle">Add Idle Agent</button>
             <button id="add-stale">Add Stale Agent</button>
+            <button id="add-terminating">Add Terminating Agent</button>
             <button id="add-stuck">Add Stuck Agent</button>
             <button id="clear-agents">Clear All Agents</button>
         </div>
@@ -140,6 +141,31 @@
                     health: {
                         is_stuck: false,
                         idle_minutes: 120,
+                        stuck_task_ids: []
+                    }
+                }
+            };
+            const agents = state.getAgents();
+            state.setEntities('agents', [...agents, agent]);
+        });
+        
+        document.getElementById('add-terminating').addEventListener('click', () => {
+            const agent = {
+                id: `bn-${Math.random().toString(36).substr(2, 4)}`,
+                title: `Terminating Agent ${++agentCounter}`,
+                short_name: `agent-${agentCounter}`,
+                type: 'agent',
+                status: 'terminating',
+                pid: 1000 + agentCounter,
+                started_at: new Date(Date.now() - 3600000).toISOString(),
+                _agent: {
+                    name: `Terminating Agent ${agentCounter}`,
+                    purpose: `Agent is being terminated. Process will exit shortly.`,
+                    status: 'terminating',
+                    started_at: new Date(Date.now() - 3600000).toISOString(),
+                    health: {
+                        is_stuck: false,
+                        idle_minutes: 30,
                         stuck_task_ids: []
                     }
                 }
