feat: make node info pane summary clickable for PRD/doc nodes
Add clickable link in the summary section of the node info panel that opens the document viewer when clicked. This provides an intuitive way to view full PRD/doc content directly from the node info panel.

Changes:
- Add onSummaryClick callback to info panel initialization
- Make summary section clickable for doc nodes with visual feedback
- Fix showMarkdownPane reference (should be showDocViewer)
- Add CSS styling for clickable doc summary with hover states

Closes bn-a9f4

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -399,8 +399,12 @@
                 const docOpenSection = document.getElementById('info-panel-doc-open-section');
                 const docId = docOpenSection?.dataset?.docId;
                 if (docId) {
-                    showMarkdownPane(docId);
+                    showDocViewer(docId);
                 }
+            },
+            onSummaryClick: (nodeId) => {
+                // Open doc viewer when summary section is clicked (for doc nodes)
+                showDocViewer(nodeId);
             },
             onViewFullLog: () => {
                 // Switch to log view
