feat(gui): implement single-click compact info panel
- Single-click on node shows compact info panel
- Panel stays locked to node until deselected
- Click on canvas (empty space) hides the panel
- Double-click still opens expanded panel/modal
- Added onNodeClick and onCanvasClick callbacks to graph
- 300ms delay before single-click fires to allow double-click

Closes bn-63a8

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -576,9 +576,14 @@
         graph.init(canvas, {
             onNodeClick: (node) => {
                 console.log('Node clicked:', node);
-                // Show info panel for the clicked node
+                // Show info panel for the clicked node in compact mode
                 updateInfoPanelContent(infoPanel, node, [], [], []);
                 showInfoPanel(infoPanel);
+            },
+            onCanvasClick: () => {
+                console.log('Canvas clicked (empty space)');
+                // Hide info panel when clicking on empty space
+                hideInfoPanel(infoPanel);
             },
             onNodeHover: (node) => {
                 if (node) {
