feat: double-click opens info panel in expanded mode
Implements bn-3ce6: Double-click on a node now opens the info panel
directly in expanded mode (380px width, full details visible).

Single-click behavior remains unchanged (opens in compact mode).
Doc nodes still open the doc viewer modal on double-click.

Changes:
- Modified onNodeDoubleClick handler in index.html to call
  updateInfoPanelContent() and expandInfoPanel() instead of
  showNodeDetailPane()

Tested:
- GUI validation passes (just gui-check)
- No console errors
- Panel correctly shows in expanded state on double-click

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -598,11 +598,12 @@
             },
             onNodeDoubleClick: (node) => {
                 console.log('Node double-clicked:', node);
-                // Show doc viewer modal for doc nodes, detail pane for others
+                // Show doc viewer modal for doc nodes, info panel expanded for others
                 if (node.type === 'doc') {
                     showDocViewer(node.id);
                 } else {
-                    showNodeDetailPane(node.id);
+                    updateInfoPanelContent(infoPanel, node, [], [], []);
+                    expandInfoPanel(infoPanel);
                 }
             },
             onEscape: () => {
