feat: add working agent display to info panel
- Add working agent section to info panel for task/bug nodes
- Display agent ID when task has inbound working_on edge
- Compact format: '🤖 Agent: bn-xxxx' (clickable)
- Hide section if no agent is working on the task
- Add CSS styling matching queue/doc sections
- Add comprehensive unit tests

Closes bn-0322

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/test-info-panel.html
+++ b/web/test-info-panel.html
@@ -112,7 +112,8 @@
             edges: [
                 { edge_type: 'depends_on', direction: 'outbound', related_id: 'bn-c3d4' },
                 { edge_type: 'child_of', direction: 'outbound', related_id: 'bn-m1l2' },
-                { edge_type: 'tested_by', direction: 'inbound', related_id: 'bnt-0001' }
+                { edge_type: 'tested_by', direction: 'inbound', related_id: 'bnt-0001' },
+                { edge_type: 'working_on', direction: 'inbound', related_id: 'bn-ag01' }
             ]
         };
         
