feat(gui): implement 5-second linger on event nodes
Implements bn-301d - When panning to a new node event, camera now
lingers for 5 seconds showing preview pane, then returns to the
followed agent or previous position.

Changes:
- Added ui.eventLinger state to track linger status
- Created event-processor.js module that:
  - Subscribes to eventQueue changes
  - Processes events sequentially (one at a time)
  - Pans to event node with 1.5x zoom
  - Selects node to show info panel (via state)
  - Waits 5 seconds
  - Returns to previous camera position or follow target
- Integrated event processor initialization in index.html

GUI validation passes cleanly.

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -287,6 +287,7 @@
         import * as State from './js/state.js';
         const state = State; // Lowercase alias for convenience
         import * as graph from './js/graph/index.js';
+        import * as eventProcessor from './js/graph/event-processor.js';
         import * as connection from './js/connection/index.js';
         import { initializeAgentCards } from './js/components/agent-cards.js';
         import { createInfoPanel, initializeInfoPanel, showInfoPanel, hideInfoPanel, updateInfoPanelContent, expandInfoPanel, collapseInfoPanel } from './js/components/info-panel.js';
@@ -666,6 +667,9 @@
                 hideInfoPanel(infoPanel);
             }
         });
+        
+        // Initialize event processor (for Follow Events linger behavior)
+        eventProcessor.init();
         
         // View switching
         const navButtons = document.querySelectorAll('.nav-btn');
