fix(gui): add import map for marked and highlight.js in dev mode
Fixes the browser error 'Failed to resolve module specifier marked' when
running GUI in dev mode (--dev flag). The issue was that bare module
specifiers like 'marked' and 'highlight.js' only work with bundlers.

Solution:
- Add import map to web/index.html mapping bare specifiers to ESM files
- Serve node_modules at /node_modules in dev mode for import resolution

Closes bn-52f4

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,16 @@
     <title>Binnacle - Agent Navigation Graph</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🧭</text></svg>">
     
+    <!-- Import map for bare module specifiers (required for dev mode) -->
+    <script type="importmap">
+    {
+        "imports": {
+            "marked": "/node_modules/marked/lib/marked.esm.js",
+            "highlight.js": "/node_modules/highlight.js/es/index.js"
+        }
+    }
+    </script>
+    
     <!-- Base styles and theme -->
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/themes/dark.css">
