fix: prevent re-reveal when clicking same family node
When clicking a node within an already-revealed family (same rootId),
keep the family reveal active instead of collapsing and re-revealing.

This fixes the issue where same-family clicks would unnecessarily
recompute and re-animate the reveal, causing visual flicker.

Now:
- Same family: keep reveal active, update info panel only
- Different family: collapse old, reveal new
- No family: clear reveal state

Closes bn-2588

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -660,6 +660,15 @@
                 // Family reveal: find root and collect descendants
                 const rootId = findFamilyRoot(node.id);
                 if (rootId) {
+                    // If clicking within the same family, keep reveal active and just update info panel
+                    if (currentFamilyReveal.active && rootId === currentRootId) {
+                        console.log(`[FamilyReveal] Same family click (${rootId}), keeping reveal active`);
+                        // Just update info panel and return - no need to re-reveal
+                        updateInfoPanelContent(infoPanel, node, [], [], []);
+                        showInfoPanel(infoPanel);
+                        return;
+                    }
+                    
                     // If clicking a different family, collapse the old one first
                     if (currentFamilyReveal.active && rootId !== currentRootId) {
                         console.log(`[FamilyReveal] Switching from family ${currentRootId} to ${rootId}`);
