gui: rename 'Activity Log' to 'Recent Activity'
- Updated nav button label from 'Activity Log' to 'Recent Activity'
- Updated h2 heading in log view to 'Recent Activity'
- Updated HTML comment to match new naming

Closes: bn-2855

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -250,7 +250,7 @@
                     <button class="nav-btn active" data-view="graph">Graph</button>
                     <button class="nav-btn" data-view="nodes">Nodes</button>
                     <button class="nav-btn" data-view="agents">Agents</button>
-                    <button class="nav-btn" data-view="log">Activity Log</button>
+                    <button class="nav-btn" data-view="log">Recent Activity</button>
                 </nav>
             </div>
             <div class="header-right">
@@ -289,9 +289,9 @@
                 <div id="agents-list"></div>
             </div>
             
-            <!-- Activity log view -->
+            <!-- Recent activity view -->
             <div class="view" id="log-view">
-                <h2>Activity Log</h2>
+                <h2>Recent Activity</h2>
                 <div id="activity-log"></div>
             </div>
         </div>
